# rusty_mandelbrot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: fractals.rs  main.rs
