[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Pascal von Fellenberg <pvonfellenberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
png = "0.16.7"
mandelbrot = "*"
